[package]
name = "actori-redis"
version = "0.8.0"
authors = ["Christian Haynes <06chaynes@gmail.com>", "Nikolay Kim <fafhrd91@gmail.com>"]
description = "Redis integration for actori framework"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["web", "redis", "async", "actori", "tokio"]
homepage = "https://github.com/actori/actori-redis"
repository = "https://github.com/actori/actori-redis.git"
documentation = "https://docs.rs/actori-redis/"
categories = ["network-programming", "asynchronous"]
exclude = [".gitignore", ".travis.yml", ".cargo/config", "appveyor.yml"]
edition = "2018"

[lib]
name = "actori_redis"
path = "src/lib.rs"

[badges]
travis-ci = { repository = "actori/actori-redis", branch = "master" }
codecov = { repository = "actori/actori-redis", branch = "master", service = "github" }

[features]
default = ["web"]

# actori-web integration
web = ["actori/http", "actori-service", "actori-web", "actori-session/cookie-session", "rand", "serde", "serde_json"]

[dependencies]
actori = "0.9.0"
actori-utils = "1.0.6"

log = "0.4.6"
backoff = "0.1.5"
derive_more = "0.99.2"
futures = "0.3.1"
redis-async = "0.6.1"
actori-rt = "1.0.0"
time = "0.1.42"
tokio = "0.2.6"
tokio-util = "0.2.0"

# actori web session
actori-web = { version = "2.0.0", optional = true }
actori-service = { version = "1.0.5", optional = true }
actori-session = { version = "0.3.0", optional = true }
rand = { version = "0.7.0", optional = true }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
serde_json = { version = "1.0.40", optional = true }
env_logger = "0.6.2"

[dev-dependencies]
env_logger = "0.6"
